# API-workshop-do-notebook-ao-deploy

./: main.py  pyproject.toml  readme.md  requirements-dev.txt  tests.py
src/: data.py  database.py  main.py  model.py  routes.py  schema.py
tests/: tests.py
