[tool.poetry]
name = "api-workshop"
version = "0.1.0"
description = "Projeto destinado a criação das APIs do projeto"
authors = ["Daniel L. Alves <daniel.leonssio@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
taskipy = "^1.12.2"
pytest = "^7.4.4"
httpx = "^0.26.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

run = "uvicorn src.main:app --reload"
test = "pytest -v tests/tests.py"
kill = "kill -9 $(lsof -t i:8000)"